--- a/VoxelViewer.Presentation/Presentation.Views/MainWindow.xaml
+++ b/VoxelViewer.Presentation/Presentation.Views/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window
-    x:Class="VoxelViewer2D.Presentation.MainWindow"
+    x:Class="VoxelViewer2D.Presentation.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:App="clr-namespace:VoxelViewer2D.Presentation"
+    xmlns:Views="clr-namespace:VoxelViewer2D.Presentation.Views"
     xmlns:Controls="clr-namespace:System.Windows.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -27,7 +27,7 @@
             Grid.Row="1"
             Background="Gray"
             RenderTransformOrigin="0.0,0.0">
-            <App:VoxelMapView
+            <Views:VoxelMapView
                 x:Name="VoxelMapView"
                 Width="64"
                 Height="32"
@@ -35,15 +35,15 @@
                 VerticalAlignment="Top"
                 ClipToBounds="True"
                 RenderTransformOrigin="0.0,0.0">
-                <App:VoxelMapView.RenderTransform>
+                <Views:VoxelMapView.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform ScaleX="10" ScaleY="10" />
                         <SkewTransform />
                         <RotateTransform />
                         <TranslateTransform />
                     </TransformGroup>
-                </App:VoxelMapView.RenderTransform>
-            </App:VoxelMapView>
+                </Views:VoxelMapView.RenderTransform>
+            </Views:VoxelMapView>
         </Controls:ContentViewer>
     </Grid>
 </Window>
