--- a/VoxelViewer.Presentation/Presentation.Views/MainWindow.xaml
+++ b/VoxelViewer.Presentation/Presentation.Views/MainWindow.xaml
@@ -10,6 +10,7 @@
     Title="Voxel Viewer 2D"
     Width="1600"
     Height="800"
+    FocusManager.FocusedElement="{Binding ElementName=VoxelMapView}"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
