--- a/VoxelViewer.Presentation/Presentation.Views/MainWindow.xaml
+++ b/VoxelViewer.Presentation/Presentation.Views/MainWindow.xaml
@@ -1,31 +1,30 @@
-﻿<Window
-    x:Class="VoxelViewer2D.Presentation.Views.MainWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Controls="clr-namespace:System.Windows.Controls"
-    xmlns:ViewModels="clr-namespace:VoxelViewer2D.Application.ViewModels;assembly=VoxelViewer2D.Application"
-    xmlns:Views="clr-namespace:VoxelViewer2D.Presentation.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="Voxel Viewer 2D"
-    Width="1600"
-    Height="800"
-    FocusManager.FocusedElement="{Binding ElementName=VoxelMapView}"
-    mc:Ignorable="d">
+﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="clr-namespace:System.Windows.Controls"
+        xmlns:Views="clr-namespace:VoxelViewer2D.Presentation.Views"
+        xmlns:ViewModels="clr-namespace:VoxelViewer2D.Application.ViewModels;assembly=VoxelViewer2D.Application"
+        x:Class="VoxelViewer2D.Presentation.Views.MainWindow"
+        Title="Voxel Viewer 2D"
+        Width="1600"
+        Height="800"
+        FocusManager.FocusedElement="{Binding ElementName=VoxelMapView}"
+        mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Menu d:IsLocked="True">
+        <Menu Grid.Row="0">
             <MenuItem Header="Tools">
-                <MenuItem Click="OnSnapshotClick" Header="Snapshot" />
+                <MenuItem Header="Snapshot" Click="OnSnapshotClick" />
             </MenuItem>
             <MenuItem Header="Help">
-                <MenuItem Click="OnHelpClick" Header="Help" />
+                <MenuItem Header="Help" Click="OnHelpClick" />
             </MenuItem>
         </Menu>
-        <Controls:ContentViewer Grid.Row="1" Background="Gray" ClipToBounds="True" RenderTransformOrigin="0.0,0.0">
+        <Controls:ContentViewer Background="Gray" RenderTransformOrigin="0.0,0.0" ClipToBounds="True" Grid.Row="1">
             <Views:VoxelMapView x:Name="VoxelMapView" Width="64" Height="32" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.0,0.0">
                 <Views:VoxelMapView.RenderTransform>
                     <TransformGroup>
